sfdx-source/force-app/main/default/objects/ironclad__Ironclad_Contract__c/fields/ironclad__Account__c.field-meta.xml
<CustomField>
    <fullName>ironclad__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ironclad Contracts</relationshipLabel>
    <relationshipName>Ironclad_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>