sfdx-source/force-app/main/default/objects/ironclad__Ironclad_Contract__c/fields/ironclad__Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>ironclad__Agreement_Date__c</fullName>
    <label>Agreement Date</label>
    <type>Date</type>
</CustomField>