sfdx-source/force-app/main/default/objects/ironclad__Ironclad_Contract__c/fields/ironclad__CounterpartySignedId__c.field-meta.xml
<CustomField>
    <fullName>ironclad__CounterpartySignedId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Counterparty Signed By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ironclad Contracts (Counterparty Signed By)</relationshipLabel>
    <relationshipName>Ironclad_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>