sfdx-source/force-app/main/default/objects/ironclad__Ironclad_Contract__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Ironclad Contracts</relationshipLabel>
    <relationshipName>Ironclad_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>